# otbtf

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.txt  mkdocs.yml  otb-module.cmake  setup.py
app/: CMakeLists.txt  otbDensePolygonClassStatistics.cxx  otbImageClassifierFromDeepFeatures.cxx  otbLabelImageSampleSelection.cxx  otbPatchesExtraction.cxx  otbPatchesManipulation.cxx  otbPatchesSelection.cxx  otbTensorflowModelServe.cxx  otbTensorflowModelTrain.cxx  otbTrainClassifierFromDeepFeatures.cxx
doc/: APPLICATIONS.md  CREATEYOUROWN.md  DOCKERUSE.md  EXAMPLES.md  HOWTOBUILD.md  api_distributed.md  api_model_generalities.md  api_tutorial.md  app_inference.md  app_overview.md  app_sampling.md  app_training.md  build_from_sources.md  deprecated.md  doc_requirements.txt  docker_build.md  docker_troubleshooting.md  docker_use.md  gen_ref_pages.py  index.md
include/: CMakeLists.txt  otbTensorflowCommon.cxx  otbTensorflowCommon.h  otbTensorflowCopyUtils.cxx  otbTensorflowCopyUtils.h  otbTensorflowDataTypeBridge.cxx  otbTensorflowDataTypeBridge.h  otbTensorflowGraphOperations.cxx  otbTensorflowGraphOperations.h  otbTensorflowMultisourceModelBase.h  otbTensorflowMultisourceModelBase.hxx  otbTensorflowMultisourceModelFilter.h  otbTensorflowMultisourceModelFilter.hxx  otbTensorflowMultisourceModelLearningBase.h  otbTensorflowMultisourceModelLearningBase.hxx  otbTensorflowMultisourceModelTrain.h  otbTensorflowMultisourceModelTrain.hxx  otbTensorflowMultisourceModelValidate.h  otbTensorflowMultisourceModelValidate.hxx  otbTensorflowSampler.h  otbTensorflowSampler.hxx  otbTensorflowSamplingUtils.cxx  otbTensorflowSamplingUtils.h  otbTensorflowSource.h  otbTensorflowSource.hxx  otbTensorflowStreamerFilter.h  otbTensorflowStreamerFilter.hxx  otbTrainClassifierFromDeepFeatures.cxx
otbtf/: __init__.py  dataset.py  layers.py  model.py  ops.py  tfrecords.py  utils.py
otbtf/examples/: __init__.py
otbtf/examples/tensorflow_v1x/: __init__.py  create_savedmodel_ienco-m3_patchbased.py  create_savedmodel_maggiori17_fullyconv.py
otbtf/examples/tensorflow_v2x/: scalar_product.py  training.py
otbtf/examples/tensorflow_v2x/deterministic/: __init__.py  l2_norm.py  scalar_prod.py
otbtf/examples/tensorflow_v2x/fcnn/: README.md  __init__.py  create_tfrecords.py  fcnn_model.py  helper.py  train_from_patches-images.py  train_from_patchesimages.py  train_from_tfrecords.py  training.py
python/: README.md  ckpt2savedmodel.py  create_model_ienco-m3_patchbased.py  create_model_maggiori17_fullyconv.py  create_savedmodel_ienco-m3_patchbased.py  create_savedmodel_maggiori17_fullyconv.py  create_savedmodel_pxs_fcn.py  create_savedmodel_simple_cnn.py  create_savedmodel_simple_fcn.py  otbtf.py  system.py  train_model_maggiori17_fullyconv.py  tricks.py
python/examples/tensorflow_v1x/: create_savedmodel_ienco-m3_patchbased.py
python/examples/tensorflow_v2x/: l2_norm.py
python/models/: pxs_fcn.py
test/: CMakeLists.txt  api_unittest.py  geos_test.py  imports_test.py  nodata_test.py  numpy_test.py  otbTensorflowCopyUtilsTests.cxx  otbTensorflowTests.cxx  pc_test.py  rio_test.py  sr4rs_unittest.py  test_utils.py  tutorial_unittest.py
test/data/: RF_model_from_deep_features_map.tif  Sentinel-2_B4328_10m_labels_A.tif  Sentinel-2_B4328_10m_labels_B.tif  Sentinel-2_B4328_10m_patches_A.jp2  Sentinel-2_B4328_10m_patches_B.jp2  amsterdam_labels_A.tif  amsterdam_labels_B.tif  amsterdam_patches_A.tif  amsterdam_patches_B.tif  apTvClTensorflowModelServeCNN16x16PB.tif  apTvClTensorflowModelServeCNN8x8_32x32FC.tif  apTvClTensorflowModelServeCNN8x8_32x32PB.tif  apTvClTensorflowModelServeFCNN16x16FC.tif  apTvClTensorflowModelServeFCNN16x16PB.tif  apTvClTensorflowModelServeFCNN64x64to32x32.tif  classif_model1.tif  classif_model2.tif  classif_model3_fcn.tif  classif_model3_pb.tif  classif_model4.tif  classif_model4_softmax.tif  fake_spot6.jp2  nd_out.tif  outvec_A.gpkg  outvec_B.gpkg  pan_subset.tif  patchimg_01.tif  patchimg_11.tif  pxs_subset.tif  pxs_subset2.tif  s2_10m_labels_A.tif  s2_10m_labels_B.tif  s2_10m_patches_A.tif  s2_10m_patches_B.tif  s2_20m_patches_A.tif  s2_20m_patches_B.tif  s2_20m_stack.jp2  s2_labels_A.tif  s2_labels_B.tif  s2_patches_A.tif  (+9 more)
test/models/: model5.py
test/models/model1/: saved_model.pb
test/models/model1/SavedModel_cnn/: saved_model.pb
test/models/model1/SavedModel_cnn/variables/: variables.data-00000-of-00001  variables.index
test/models/model1/variables/: variables.data-00000-of-00001  variables.index
test/models/model2/: saved_model.pb
test/models/model2/variables/: variables.data-00000-of-00001  variables.index
test/models/model3/: saved_model.pb
test/models/model3/variables/: variables.data-00000-of-00001  variables.index
test/models/model4/: saved_model.pb
test/models/model4/variables/: variables.data-00000-of-00001  variables.index
test/models/model5/: saved_model.pb
test/models/model5/variables/: variables.data-00000-of-00001  variables.index
tools/docker/: README.md  build-deps-cli.txt  build-deps-gui.txt  build-env-tf.sh  build-flags-otb.txt  docker_build_cpu-dev-tests.sh  multibuild.sh
tools/dockerfiles/bionic.tf-r1.14.otb-7.0/: Dockerfile
tools/dockerfiles/bionic.tf-r1.14.otb-7.0-GPU/: Dockerfile
tools/dockerfiles/bionic.tf-r1.14.otb-7.0.0-rc1/: Dockerfile
tools/dockerfiles/bionic.tf-r1.14.otb-7.0.0-rc1-GPU/: Dockerfile
tools/dockerfiles/bionic.tf-r1.14.otb-develop/: Dockerfile
tools/dockerfiles/r1.6/bionic.tf-r1.14.otb-develop/: Dockerfile
tools/dockerfiles/r1.7/bionic.tf-r1.14.otb-7.0/: Dockerfile
tools/dockerfiles/r1.7/bionic.tf-r1.14.otb-7.0-GPU/: Dockerfile
tools/dockerfiles/r2.0/bionic.tf-r2.1.otb-7.1/: Dockerfile
tools/dockerfiles/r2.0/bionic.tf-r2.1.otb-7.1-CPU/: Dockerfile
tools/dockerfiles/r2.0/bionic.tf-r2.1.otb-7.1-GPU/: Dockerfile  stderr.txt
tricks/: __init__.py  ckpt2savedmodel.py  tricks.py
(+1 files in other folders)
